# stem-mood-sensing

./: .flake8  .gitignore  README.md  alembic.ini  docker-compose.yml  makefile  pyproject.toml
local_infra/: Dockerfile  init.sql
migrations/: env.py
migrations/versions/: 4ced6aedafd0_first_revision.py
src/: application.py  main.py
src/domain/interfaces/: input_port.py  output_port.py  use_case.py
src/domain/ports/: happy_location.py  mood_frequency.py  upload_mood_capture.py
src/domain/use_cases/: happy_location.py  mood_frequency.py  upload_mood_capture.py
src/frameworks/: container.py
src/frameworks/database/: container.py  postgres_manager.py
src/frameworks/fast_api/: manager.py
src/interface_adapters/data/: database_service.py
src/interface_adapters/data/models/: base.py  mood.py  user.py
src/interface_adapters/data/repositories/: happy_location.py  mood_frequency.py  upload_mood_capture.py
src/interface_adapters/dtos/: happy_location.py  mood_frequency.py  upload_mood_capture.py
src/interface_adapters/routes/: health_check.py
src/interface_adapters/routes/v1/: upload_mood_capture.py  user_mood_sensing.py
src/utils/: algorithms.py
