[tool.poetry]
name = "stem-mood-sensing"
version = "1.0.0"
description = "Mood Sensing APP"
authors = ["Diego"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = {extras = ["email"], version = "^1.10.2"}
fastapi = "^0.86"
slowapi = "^0.1.6"
fastapi-pagination = "^0.10.0"
dependency-injector = {extras = ["yaml"], version = "^4.40.0"}
sentry-sdk = {extras = ["logging","fastapi"], version = "^1"}
uvicorn = "^0.18.3"
gunicorn = "^20.1.0"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.42"}
bson = "^0.5.10"
alembic = "^1.8.1"
environs = "^9.5.0"
PyJWT = "^2.5.0"
greenlet = "^1.1.3"
psycopg2-binary = "^2.9.4"
asyncpg = "^0.26.0"
python-dateutil = "^2.8.2"
psycopg2 = "^2.9.5"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
anyio = "^3.6.1"
black = "^22.8.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.971"
pandas = "^1.4.4"
pre-commit = "^2.20.0"
pylint = "^2.15.2"
pytest = "^7.2"
pytest-asyncio = "^0.19"
pytest-cov = "^3.0"
pytest-mock = "^3.8"
pytest-tornasync = "^0.6"
pytest-trio = "^0.7"
pytest-twisted = "^1.13"
types-requests = "^2.28"
Twisted = "^22.10.0rc1"
wily = "^1.23.0"
ipykernel = "^6.15.3"
requests = "^2.28.1"
types-python-dateutil = "^2.8.19"
psycopg2 = "^2.9.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_incomplete_defs = "True"
disallow_untyped_defs = "True"
ignore_missing_imports = "True"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src", "tests"]
testpaths = ["tests"]

[tool.pylint]
init-hook = "import sys; sys.path.append('./src'), sys.path.append('./tests')"
fail-under = "9.5"

[tool.pylint.format]
max-line-length = "110"

[tool.pylint.messages_control]
disable = ["C0114", "C0116", "C0301", "R0903", "W1203"]


[tool.pylint.similarities]
ignore-imports = "yes"
min-similarity-lines = "6"

[tool.isort]
profile = "black"

[tool.commitizen]
version = "ˆ2.32.5"
tag_format = "v$version"
version_files = [
  "pyproject.toml:version",
  "commitizen/__version__.py",
  ".pre-commit-config.yaml:rev:.+Commitizen"
]
